[package]
name = "minotaur-eye"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
procfs = "0.17"
goblin = "0.9"
libc = "0.2"
hex = "0.4"
regex = "1.11"
